[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
regex = "1"
lazy_static = "1"
snafu = { version = "0.7", features = ["backtraces"] }
md5 = "0.7"
grid = "0.9"
serde = "1"
