[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
regex = "1"
lazy_static = "1"
snafu = { version = "0.7", features = ["backtraces"] }
md5 = "0.7"
grid = "0.13"
serde = "1.0"
serde_json = "1.0"
rayon = "1.7"
indoc = "2"
num = "0.4"
bit-set = "0.5"
